-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.3, 5.13.1, 5.15
-
None
There should be a dark separator line between the tool bar and the central widget. This separator line is present in normal title bar mode but disappears after calling QMainWindow::setUnifiedTitleAndToolBarOnMac (true). It looks like a regression of 5.12+ as in Qt 5.11.2 it works as it should. See the screenshots.
The test case is the same as in https://bugreports.qt.io/browse/QTBUG-70173.
Note that there is one more bug in 5.13.1: QLabel paints itself over the tool bar border in both tool bar modes (see the screenshots).
Tested on macOS 10.14.6.